2016-09-27  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>

	* gui/mainWindow.py (MainApp.__createInputs): Moved inputs from a
	vertical box to a grid.
	(MainApp.__createInputs): Created a dictionary to hold all inputs

2016-09-26  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>

	* gui/mainWindow.py: Created main window draft.
	(MainApp.__createInputs): Added some inputs to modify algorithm.
	TODO: Move the layout to grid

	* mainGui.py: Created main script to handle the GUI.
